# gainy-compute

./: Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/actions/: unit_tests.yml
.github/actions/unit_tests/: action.yml
.github/workflows/: main.yml  publish.yml  release.yml  style-check.yml  test.yml  tests.yml
fixtures/: 0_raw_data.sql  app.sql  functions.sql  public.sql  raw_data.sql
gainy/: context_container.py  exceptions.py  models.py  utils.py
gainy/analytics/: __init__.py  amplitude.py  appsflyer.py  constants.py  exceptions.py  interfaces.py  repository.py  service.py
gainy/analytics/amplitude/: sdk.py  service.py
gainy/analytics/attribution_sources/: db.py
gainy/analytics/firebase/: sdk.py  service.py
gainy/analytics/jobs/: sync_profiles_attributes.py
gainy/billing/: exceptions.py  interfaces.py  models.py  provider.py  repository.py  service.py
gainy/billing/drivewealth/: provider.py
gainy/billing/jobs/: charge_invoices.py  create_invoices.py
gainy/billing/locking_functions/: __init__.py  charge_invoice.py
gainy/billing/stripe/: api.py  models.py  provider.py  repository.py
gainy/data/: user_categories_decision_matrix.csv
gainy/data_access/: db_lock.py  exceptions.py  models.py  operators.py  optimistic_lock.py  pessimistic_lock.py  repository.py
gainy/github/: update_file_job.py
gainy/industries/: lifecycle.py  model.py  repository.py  runner.py  tfidf_model.py
gainy/optimization/collection/: __init__.py  repository.py  tickers_filter.py
gainy/optimization/jobs/: optimize_collections.py
gainy/plaid/: client.py  common.py  exceptions.py  models.py  service.py
gainy/queue_processing/: abstract_event_handler.py  abstract_message_handler.py  aws_message_handler.py  dispatcher.py  exceptions.py  interfaces.py  models.py
gainy/queue_processing/event_handlers/: __init__.py  abstract_aws_event_handler.py  ecs_deployment_state_changed.py
gainy/queue_processing/jobs/: rehandle_failed_events.py
gainy/recommendation/: __init__.py  compute.py  core.py  exceptions.py  job.py  match_score.py  models.py  repository.py  serivce.py
gainy/recommendation/sql/: cleanup_collection_match_scores.sql  cleanup_match_scores.sql  cleanup_ticker_match_scores.sql  collection_ranking_scores.sql  collection_top_clicked.sql  collection_top_favorited.sql  collection_top_merged_algorithm.sql  collection_top_performance.sql  generate_collection_match_scores.sql  generate_match_scores.sql  generate_ticker_match_scores.sql  get_profiles_to_update_ms.sql  get_tickers_to_update_ms.sql  profile_categories.sql  profile_interests.sql  save_profiles_state.sql  save_tickers_state.sql  ticker_categories_industries.sql  ticker_riskscore_continuous.sql
gainy/recommendations/: match_score.py
gainy/rewards/: models.py  repository.py  reward_job.py  service.py
gainy/services/: aws_ecs.py  aws_lambda.py  notification.py  sendgrid.py  slack.py
gainy/tests/: common.py
gainy/tests/mocks/: repository_mocks.py
gainy/trading/: __init__.py  exceptions.py  models.py  repository.py  service.py
gainy/trading/drivewealth/: __init__.py  abstract_event_handler.py  api.py  config.py  exceptions.py  models.py  queue_message_handler.py  repository.py
gainy/trading/jobs/: update_account_balances.py
gainy_compute/: utils.py
gainy_compute/common/math/: vectors.py
gainy_compute/data_access/: repository.py
gainy_compute/industries/: bert_model.py  console.py  lifecycle.py  runner.py  tfidf_model.py
gainy_compute/industries/prototype/: cleanse.py  prototype_model.py
gainy_compute/recommendations/: match_score.py
src/gainy/compute/: collection_utils.py
src/industries/: lifecycle.py  runner.py  tfidf_model.py
src/recommendations/: match_score.py
tests/billing/: test_repository.py  test_service.py
tests/billing/drivewealth/: test_provider.py
tests/billing/locking_functions/: test_charge_invoices.py
tests/billing/stripe/: test_api.py  test_provider.py
tests/data_access/: test_db_lock.py  test_optimistic_lock.py  test_pessimistic_lock.py
tests/fixtures/: app.sql  public_test.sql
tests/gainy/compute/: cleanse_tests.py  run_test.py
tests/gainy_compute/: cleanse_tests.py  run_test.py  test_db_repo.py
tests/gainy_compute/match_score/: match_score_tests.py
tests/queue_processing/: test_dispatcher.py
tests/recommendation/: test_match_score.py  test_service.py
tests/recommendations/: test_match_score.py
tests/rewards/: test_job.py  test_service.py
tests/trading/: test_service.py
tests/trading/drivewealth/: test_api.py  test_common.py  test_provider.py  test_rebalance_helper.py  test_repository.py  (+1 more)
(+72 files in other folders)
