[tool.poetry]
name = "gainy-compute"
version = "0.4.2"
description = "All stuff related to data computations and ML models in Python"
authors = [
    "Vasilii Khomutov <vasilii@gainy.app>",
    "Mikhail Astashkevich <mikhail@gainy.app>",
]

packages = [
    { include = "gainy"},
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pandas = "^1.3.4"
sklearn = "^0.0"
scipy = "^1.7.0,<1.9"
mlflow = "^1.22.0"
pyarrow = "^6.0.1"
boto3 = "^1.20.24"
psycopg2-binary = "^2.9.3"
nltk = "^3.6.7"
numpy = "^1.22.1"
backoff = "^1.11.1"
python-json-logger = "^2.0.4"
stripe = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gainy_industry_assignment = "gainy.industries.runner:cli"
gainy_recommendation = "gainy.recommendation.job:cli"
gainy_update_account_balances = "gainy.trading.jobs.update_account_balances:cli"
gainy_create_invoices = "gainy.billing.jobs.create_invoices:cli"
gainy_charge_invoices = "gainy.billing.jobs.charge_invoices:cli"
